--- a/argocd/base/frontend/deployment.yaml
+++ b/argocd/base/frontend/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: youracr.azurecr.io/frontend:1
+          image: stagingacr1234.azurecr.io/frontend:1
           ports:
             - containerPort: 3000
