--- a/argocd/base/order-service/deployment.yaml
+++ b/argocd/base/order-service/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: order
-          image: youracr.azurecr.io/order-service:1
+          image: stagingacr1234.azurecr.io/order-service:1
           ports:
             - containerPort: 5000
