--- a/argocd/base/product-service/deployment.yaml
+++ b/argocd/base/product-service/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: product
-          image: youracr.azurecr.io/product-service:1
+          image: stagingacr1234.azurecr.io/product-service:1
           ports:
             - containerPort: 5000
