--- a/argocd/base/frontend/kustomization.yaml
+++ b/argocd/base/frontend/kustomization.yaml
@@ -3,5 +3,5 @@ resources:
   - service.yaml
 
 images:
-  - name: youracr.azurecr.io/frontend
+  - name: stagingacr1234.azurecr.io/frontend
     newTag: "1"
