--- a/argocd/base/frontend/ingress.yaml
+++ b/argocd/base/frontend/ingress.yaml
@@ -8,8 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: frontend.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
