--- a/argocd/base/frontend/ingress.yaml
+++ b/argocd/base/frontend/ingress.yaml
@@ -8,7 +8,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
+    - host: frontend.local
+      http:
         paths:
           - path: /
             pathType: Prefix
